# adapt_kalman

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
launch/: adapt_kalman_sim.launch  ekf.launch  localization.launch  simple_kalman.launch  simple_kalman_sim.launch  transform_data.launch
numpy/: straight.npy  straight_dmp.npy
scripts/: bag_generator.py  bag_reader.py  data_exporter.py  experiments.py  simulator.py  thesis.py
src/adapt_kalman/: adapt_kalman_sim_octagon.py  adaptive_kalman_filter.py  bag_generator.py  bag_reader.py  bag_system_filter.py  bag_system_io.py  bagreader.py  ekf_reader.py  exporter.py  kalman_filter.py  moving_weighted_window.py  sh_helper.py  shell.py  simulator.py  simulator_tools.py  state_estimator.py  state_plot_handler.py  state_plotter.py  system_io_simulator.py  thesis.py  thesis_export.py
src/kalman_estimator/: __init__.py  kalman_estimator.py  kalman_filter.cpp  kalman_filter.py  moving_weighted_window.py
tests/: test_bag_system_io.py
