<?xml version="1.0"?>
<package format="2">
  <name>simple_kalman</name>
  <version>0.1.0</version>
  <description>Simple Kalman Filter</description>

  <maintainer email="braineniac@protonmail.com">brainenaic</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


</package>
