<?xml version="1.0"?>
<package format="2">
  <name>kalman_estimator</name>
  <version>0.3.0</version>
  <description>A state estimator using Kalman Filters</description>

  <maintainer email="braineniac@protonmail.com">brainenaic</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>python-rosdep</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-pandas</exec_depend>
  <exec_depend>python-scipy</exec_depend>

</package>
